--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "firebase-admin": "^11.5.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
@@ -46,6 +47,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
